fix minor formatting bugs

--- a/about.html
+++ b/about.html
@@ -131,18 +131,23 @@
         </div>
         <div class="container about-list mb-5">
         <!-- <div class="col-8 ordered-list text-center justify-content-center"> -->
-            <ol class="centered-list text-left justify-content-center">
-                <li class="mb-3"> Subscribe to Positivity Hub to receive daily positivity boosts!</li>
-                <li class="mb-3"> Browse the hand-picked selection of pictures and memes under Explore.</li>
-                <li class="mb-3"> Use the Smile Tracker to remind yourself of &star;everything and anything&star; positive throughout your day ☺</li>
-                <li class="mb-3"> Utilize the resources linked under Resources if you need it.</li>
-                <li class="mb-3"> Reach out and contact me if you have any sugguestions to make Positivity Hub better or if you just want to connect!</li>
-                <li class="mb-3"> Understand that during a time like this:
-                    <h5 class="bolded-text special_text text-center my-3"><b><a href="https://www.netflix.com/title/81243992">
-                        IT'S OKAY TO NOT BE OKAY 
-                        </a></b></h5>
-                    </li>
-            </ol>
+            <div class="row">
+                <!-- <div class="container list-container my-5"> -->
+                        <!-- <ul class="happiness-list special_text mx-5" data-lists> -->
+                <ol class="about-list text-left justify-content-center mx-5 mt-3">
+                    <li class="mb-4"> Subscribe to Positivity Hub to receive daily positivity boosts!</li>
+                    <li class="mb-4"> Browse the hand-picked selection of pictures and memes under Explore.</li>
+                    <li class="mb-4"> Use the Smile Tracker to remind yourself of &star;everything and anything&star; positive throughout your day ☺</li>
+                    <li class="mb-4"> Utilize the resources linked under Resources if you need it.</li>
+                    <li class="mb-4"> Reach out and contact me if you have any sugguestions to make Positivity Hub better or if you just want to connect!</li>
+                    <li class="mb-0"> Understand that during a time like this:
+                        <h5 class="bolded-text special_text text-center my-3"><b><a href="https://www.netflix.com/title/81243992">
+                            IT'S OKAY TO NOT BE OKAY 
+                            </a></b></h5>
+                        </li>
+                </ol></div>
+                <div class="col"></div>
+            </div>
         </div>
         <img class="rounded mx-auto d-block mb-5 text-center justify-content-center" src="img/self_care.jpg" width="500">
     </div>
