--- a/explore.html
+++ b/explore.html
@@ -72,25 +72,25 @@
         </div>
         
         <div class="btn-toolbar justify-content-center my-4 special_text" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-5" role="group" aria-label="First group">
-                <button type="button" class="btn btn-light btn-bar">
+            <div class="btn-group mx-5" role="group" aria-label="First group">
+                <a href="#cute-animals"><button type="button" class="btn btn-light btn-bar">
                     <img class="explore-button" src="img/button_animal.jpg">
-                    Cutie Animals</button>
+                    Cutie Animals</button></a>
             </div>
-            <div class="btn-group mr-5" role="group" aria-label="First group">
-                <button type="button" class="btn btn-light btn-bar">
+            <div class="btn-group mx-5" role="group" aria-label="First group">
+                <a href="#quotes"><button type="button" class="btn btn-light btn-bar">
                     <img class="explore-button" src="img/button_quote.jpg">
-                    Fav Quotes &hearts;</button>
+                    Fav Quotes &hearts;</button></a>
             </div>
-            <div class="btn-group mr-5" role="group" aria-label="First group">
-                <button type="button" class="btn btn-light btn-bar">
+            <div class="btn-group mx-5" role="group" aria-label="First group">
+                <a href="#memes"><button type="button" class="btn btn-light btn-bar">
                     <img class="explore-button" src="img/button_meme.jpg">
-                    UWU Memes ᕦ( ͡° ͜ʖ ͡°)ᕤ</button>
+                    UWU Memes ᕦ( ͡° ͜ʖ ͡°)ᕤ</button></a>
             </div>
-            <div class="btn-group mr-5" role="group" aria-label="First group">
-                <button type="button" class="btn btn-light btn-bar">
+            <div class="btn-group mx-5" role="group" aria-label="First group">
+                <a href="#nature"><button href="#nature" type="button" class="btn btn-light btn-bar">
                     <img class="explore-button" src="img/button_aesthetic.jpg">
-                    Nature Aesthetics</button>
+                    Nature Aesthetics</button></a>
             </div>
             <!-- <div class="btn-group" role="group" aria-label="First group">
                 <button type="button" class="btn btn-light btn-bar">
@@ -100,9 +100,11 @@
         </div>
 
         <!-- Animals!! -->
-        <div class="border-top border-dark mt-5 w-80"></div>
+        <a id="cute-animals">
+            <div class="border-top border-dark mt-5 w-80"></div>
+        </a>
         <div class="container pb-4 special_text">
-            <h3 class="text-left ml-5 mt-5 mb-0" >Cutie Animals</h3>
+            <h3 class="text-left ml-5 mt-5 mb-0">Cutie Animals</h3>
             <div class="row justify-content-center my-1 text-center special_text">
 
                 <div class="col-md-6 col-lg-4 py-3">
@@ -157,8 +159,9 @@
         </div>
 
         <!-- Quotes!! -->
+        <a id="quotes">
         <div class="border-top border-dark mt-2 w-80"></div>
-
+        </a>
         <div class="container pb-4 special_text">
             <h3 class="text-left ml-5 mt-5 mb-0" >Fav Quotes</h3>
             <div class="row justify-content-center my-1 text-center special_text">
@@ -215,7 +218,9 @@
         </div>
 
         <!-- Memes!! -->
-        <div class="border-top border-dark mt-2 w-80"></div>
+        <a id="memes">
+            <div class="border-top border-dark mt-2 w-80"></div>
+        </a>
 
         <div class="container pb-4 special_text">
             <h3 class="text-left ml-5 mt-5 mb-0" >UWU Memes</h3>
@@ -273,7 +278,9 @@
         </div>
 
         <!-- Aesthetic Pics -->
-        <div class="border-top border-dark mt-2 w-80"></div>
+        <a id="nature">
+            <div class="border-top border-dark mt-2 w-80"></div>
+        </a>
 
         <div class="container pb-4 special_text">
             <h3 class="text-left ml-5 mt-5 mb-0" >Natures Aesthetics</h3>
