--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img src="img/daisy2.jpg" class="w-100" alt=""> <!--img/nature/nature1.jpg-->
+                    <img src="img/carousel1.jpg" class="w-100" alt=""> <!--img/nature/nature1.jpg-->
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-end">
@@ -95,7 +95,6 @@
                                         You probably miss your friends or your family overseas. 
                                         <br><br>
                                         Positivity Hub will cheer you up with positive-vibes-only images and quotes &Star; &star; hand picked &star; &Star; for you ☺
-                                        <br><br>
                                         <!-- The Positivity Hub is designed to be a safe space for everyone to explore and find happiness during this difficult time. <br>
                                         Here, we can bounce positive energy off of each other and spread positivity .<br>
                                         <br>
@@ -111,7 +110,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="img/cloud2.JPG" class="w-100" alt="">
+                    <img src="img/cloud2.jpg" class="w-100" alt="">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row">
@@ -120,9 +119,10 @@
                                     <h3> &#10087;Journey of Discovery&#9753; </h3>
                                     <div class="border-top border-dark my-1 w-80"></div>
                                     <p class="lead">
-                                        Find small things around you that bring you joy.<br>
-                                        E.g. Watching the sunset and looking up at the sky <br>in its brightest colors.
+                                        Find small things around you that bring you joy.
+                                        E.g. Watching the sunset and looking up at the sky in its brightest colors.
                                     </p>
+                                    <a href="#" class="btn btn-light btn-md">Smile Tracker</a>
                                 </div>
                             </div>
                         </div>
@@ -139,8 +139,8 @@
                                     <h3>" Hey, Just Checking In... "</h3>
                                     <div class="border-top border-dark mb-3 w-80 ml-auto"></div>
                                     <p class="lead">
-                                        Let your friends know you're thinking of them!<br>
-                                        A simple " How you doing? " can go a long way.<br>
+                                        Let your friends know you're thinking of them!
+                                        A simple " How you doing? " can go a long way.
                                         Even better: Recommend &Star;Positivity Hub&Star; to them!
                                     </p>
                                     <!-- <a href="#" class="btn btn-light btn-md">filler</a> -->
@@ -240,19 +240,19 @@
                 <div class="col-md-6 col-lg-4 py-3">
                     <img class="preview" src="img/preview1.jpg">
                     <p class="lead">Morning Greetings from <br> Mr. Stabby and His Cute Friends</p>
-                    <a href="explore.html" class="btn btn-outline-dark btn-md">See more</a>
+                    <a href="explore.html#cute-animals" class="btn btn-outline-dark btn-md">See more</a>
                 </div>
 
                 <div class="col-md-6 col-lg-4 py-3">
                     <img class="preview" src="img/preview2.jpg">
                     <p class="lead">Quotes That Will Give You<br> the Best Positivite Energy Boost</p>
-                    <a href="explore.html" class="btn btn-outline-dark btn-md">See more</a>
+                    <a href="explore.html#quotes" class="btn btn-outline-dark btn-md">See more</a>
                 </div>
 
                 <div class="col-md-6 col-lg-4 py-3">
                     <img class="preview" src="img/preview3.jpg">
                     <p class="lead">Running Low on Crack-head Energy? We've Got You Covered</p>
-                    <a href="explore.html" class="btn btn-outline-dark btn-md">See more</a>
+                    <a href="explore.html#memes" class="btn btn-outline-dark btn-md">See more</a>
                 </div>
 
             </div>
